src/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: dark;
  color: rgba(255, 255, 255, 0.87);
  background: radial-gradient(circle, rgb(41, 76, 250) 0%, rgb(124, 150, 245) 100%);
  background-attachment: local, scroll;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.header-div {
  display: flex;
  position: sticky;
  justify-content: space-between;
  align-items: center;
  padding-right: 1em;
  padding-left: 1em;
  top: 0;
  background-color: rgba(95, 121, 250, 0.349);
  backdrop-filter: blur(5px);
  border-radius: 2em;
  z-index: 10;
}

.name-img-div {
  display: flex;
  align-items: center;
}

._8bit-img {
  float: left;
}

.title {
  font-size: 1.5em;
  display: inline-block;
  vertical-align: middle;
}

.navbar ul {
  list-style: none;
  display: flex;
  gap: 2em;
}

.navbar button {
  color: inherit;
  font-size: 1.5em;
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  text-decoration: none;
  border: 5px solid transparent;
  border-radius: 1em;
  background: none;
  transition-duration: 0.4s;
}

.header-div button {
  color: inherit;
  font-size: 1.5em;
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  text-decoration: none;
  border: 5px solid transparent;
  border-radius: 1em;
  background: none;
  transition-duration: 0.4s;
}

.navbar button:hover{
  border-radius: 1em;
  border: 5px solid transparent;
  background: fixed rgb(0, 21, 46);;
}

.header-div button:hover {
  border-radius: 1em;
  border: 5px solid transparent;
  background: fixed rgb(0, 21, 46);;
}

.portrait {
  float: left;
  margin-left: 10em;
  margin-right: 5em;
  border-radius: 2em;
}

.about {
  display: flex;
  margin-bottom: 15em;
  margin-right: 10em;
  align-content: center;
  align-items: center;
  justify-content: center;
}

.about-me {
  display: inline-block;
  word-wrap: break-word;
  max-width: 35em;
}

.about-text {
  font-size: 1.7em;
  max-width: 60em;
}

.education {
  align-content: center;
  align-items: center;
  justify-content: center;
  display: flex;
  margin-right: 15em;
}

.psu_logo {
  border-radius: 2em;
  float: right;
  margin-left: 15em;
  height: 25em;
  z-index: 1;
}

.education-text {
  text-align: left;
  float: left;
  font-size: 1.7em;
  margin-left: 9em;
}


.proj-div {
  display: flex;
  justify-content: space-evenly;
  font-size: 1.5em;
  margin-bottom: 2em;
  margin-top: 5em;
  align-items: center;
}

.proj-text {
  float: right;
  word-wrap: break-word;
  width: 800px;
  margin-right: 5em;
  margin-left: 5em;
}

.proj-div img {
  border-radius: 2em;
  float: left;
  margin-left: 5em;
  transition-duration: 0.4s;
  height: 300px;
}

.proj-header {
  font-size: 5em;
}

@keyframes slideUp {
  from {}

  to {
    transform: translateY(-20px);
  }
}

@keyframes slideDown {
  from {
    transform: translateY(-20px);
  }

  to {
    transform: translateY(0);
  }
}

.proj-div img:hover {
  animation-name: slideUp;
  animation-duration: 0.5s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
}

.proj-div img:not(:hover) {
  animation-name: slideDown;
  animation-duration: 0.5s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

.education img {
  transition-duration: 0.4s;
}

.education img:hover {
  animation-name: slideUp;
  animation-duration: 0.5s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
}

.education img:not(:hover) {
  animation-name: slideDown;
  animation-duration: 0.5s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}


.section-header {
  text-align: center;
  margin-bottom: 1em;
  font-size: 4.5em;
  scroll-margin-top: 100px;
}

.contact-div {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 0.8em;
}

.contact-div a {
  display: flex;
  text-decoration: none;
  margin-bottom: 3em;
  align-items: center;
  justify-content: space-evenly;
  margin-right: 50em;
  flex-direction: row;
  margin-left: 50em;
}

.contact-div i:hover {
  animation-name: slideUp;
  animation-duration: 0.3s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

.contact-div i:not(:hover) {
  animation-name: slideDown;
  animation-duration: 0.3s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}


@keyframes rotation {
  from {
    transform: rotate(0);
  }

  to {
    transform: rotate(360deg)
  }
}

.footer-div img {
  animation-name: rotation;
  animation-duration: 6s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}


.footer-div {
  display: flex;
  justify-content: center;
}

.footer-div p {
  margin-left: 15px;
}

.intro-div {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2em;
  flex-direction: column;
}

@keyframes cursor {
  50% {
    border-color: transparent;
  }
}

.intro-name {
  border-right: 4px solid;
  line-height: 65px;
  margin-top: 5px;
  animation-name: cursor;
  animation-duration: 1.5s;
  animation-iteration-count: infinite;
  animation-timing-function: steps(1, end);
}

.intro-div button {
  border-radius: 0.5em;
  border: none;
  background-color: rgb(0, 21, 46);
  padding: 20px 20px;
  cursor: pointer;
  transition-duration: 0.4s;
}

.intro-buttons {
  display: flex;
  justify-content: space-between;
  column-gap: 1em;
}

.intro-div button:hover {
  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
}

.intro-div i:hover {
  animation-name: slideUp;
  animation-duration: 0.5s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}


.intro-div i:not(:hover) {
  animation-name: slideDown;
  animation-duration: 0.5s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

@keyframes typing {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.see-more {
  width: 0;
  line-height: 40px;
  animation: typing 2s; 
  animation-delay: 1s;
  animation-fill-mode: forwards;
  white-space: nowrap;
  overflow: hidden;
}

@media screen and (max-width: 400px) {
  ._8bit-img {
    height: 70px;
  }

  .title {
    display: none;
    visibility: hidden;
    font-size: 0em;
    margin: 0px;
    padding: 0px;
  }

  .intro-div {
    display: flex;
    justify-content: center;
    justify-items: center;
    flex-direction: column;
    font-size: 1.2em;
    overflow-x: hidden;
  }

  .intro-div button {
    padding: 12px 12px;
  }

  .intro-name {
    line-height: 40px;
  }

  .navbar ul {
    display: flex;
    flex-direction: row;
    column-gap: 0em;
    align-items: center;
    align-content: center;
  }

  .navbar button {
    font-size: 1em;
  }

  .header-div {
    display: flex;
    position: sticky;
    justify-content: center;
    align-items: center;
    top: 0;
    background-color: rgba(95, 121, 250, 0.349);
    backdrop-filter: blur(5px);
    border-radius: 2em;
    z-index: 10;
  }

  .about {
    flex-direction: column;
  }

  .education {
    flex-direction: column-reverse;
  }
  
  .education-text p {
    word-wrap: break-word;
    width: 13em;
  }

  .about {
    margin-right: auto;
    flex-direction: column;
  }

  .about-me {
    width: 80vw;
    word-wrap: break-word;
  }

  .about-text {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }

  .proj-div {
    flex-direction: column;
  }

  .proj-div img {
    width: 90vw;
    margin-left: auto;
  }

  .proj-text {
    display: flex;
    width: 16em;
    flex-direction: column;
    align-items: center;
  }

  .portrait {
    margin-left: 0em;
    margin-right: 0em;
    border-radius: 2em;
  }

  .contact-div{
    font-size: 1em;
    width: 100vw;
  }

  .contact-div a{
    display: flex;
    font-size: 0.7em;
  }
}

@media screen and (max-width: 1200px) {
  ._8bit-img {
    height: 70px;
  }

  .home-button {
    display: none;
    visibility: hidden;
    font-size: 0em;
    margin: 0px;
    padding: 0px;
  }

  .intro-div {
    display: flex;
    justify-content: center;
    justify-items: center;
    flex-direction: column;
    font-size: 1.2em;
    overflow-x: hidden;
  }

  .intro-div button {
    padding: 12px 12px;
  }

  .intro-name {
    line-height: 40px;
  }

  .navbar ul {
    display: flex;
    flex-direction: row;
    column-gap: 0em;
    align-items: center;
    align-content: center;
  }

  .navbar button {
    font-size: 1em;
  }

  .header-div {
    display: flex;
    position: sticky;
    justify-content: space-between;
    align-items: center;
    top: 0;
    background-color: rgba(95, 121, 250, 0.349);
    backdrop-filter: blur(5px);
    border-radius: 2em;
    z-index: 10;
  }

  .about {
    flex-direction: column;
    align-items: center;
    align-content: center;
  }

  .education {
    flex-direction: column-reverse;
  }

  .education-text p {
    word-wrap: break-word;
    width: 80vw;
  }

  .about {
    margin-right: auto;
    flex-direction: column;
  }

  .about-me {
    width: 80vw;
    word-wrap: break-word;
  }

  .about-text {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }

  .proj-div {
    flex-direction: column;
  }

  .proj-div img {
    width: 90vw;
    height: auto;
    margin-left: auto;
  }

  .proj-text {
    display: flex;
    width: 80vw;
    word-wrap: break-word;
    flex-direction: column;
    align-items: center;
  }

  .portrait {
    margin-left: 0em;
    margin-right: 0em;
    border-radius: 2em;
  }

  .contact-div{
    font-size: 1em;
    width: 100vw;
  }

  .contact-div a{
    display: flex;
    font-size: 0.7em;
  }
}

